@@ -1722,8 +1722,12 @@
 	  (for-each (lambda (interface)
 		      (module-use! module interface))
 		    reversed-interfaces)
-	  (case (car kws)
-	    ((:use-module)
+	  (case (cond ((keyword? (car kws))
+		       (keyword->symbol (car kws)))
+		      ((symbol? (car kws))
+		       (string->symbol (substring (car kws) 1)))
+		      (else (car kws)))
+	    ((use-module)
 	     (if (not (pair? (cdr kws)))
 		 (error "unrecognized defmodule argument" kws))
 	     (let* ((used-name (cadr kws))
